Adding youtube embedding

--- a/client/app/views/movie-edit.html
+++ b/client/app/views/movie-edit.html
@@ -1,1 +1,2 @@
-<p>This is the movie-edit view.</p>
+<ng-include src="'views/movie-add.html'"><ng-include>
+<ng-include src="'views/movie-nav.html'"></ng-include>
