--- a/client/app/views/movie-delete.html
+++ b/client/app/views/movie-delete.html
@@ -1,1 +1,7 @@
-<p>This is the movie-delete view.</p>
+<form role="form">
+  <p>Are you sure you wish to delete the movie {{ movie.title }}?</p>
+  <div class="form-group">
+    <input type="submit" class="btn btn-danger" ng-click="deleteMovie()" value="Yes"/>
+    <button ng-click="back()" type="button" class="btn btn-default">No</button>
+  </div>
+</form>
